--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://spring-db:3306/springdb
-spring.datasource.username = springuser
-spring.datasource.password = springpassword
+spring.datasource.url = jdbc:mysql://192.168.0.113:3306/dev
+spring.datasource.username = root
+spring.datasource.password = 123456
 
 
 ## Hibernate Properties
